--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8">
 	<title>First Class Fabrics</title>
 </head>
-<body>
-	<img style="max-width:100%; height:auto;" src="FCF_BC_Sonia.png" alt="business card" width="1440">
+<body style="background-color:#000">
+	<div>
+		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:100%">
+	</div>
 </body>
 </html>
