--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
 	<title>First Class Fabrics</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body style="background-color:#000">
 	<div>
