--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="background-color:#000">
-	<div>
+	<div style="margin-top:5rem">
 		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:100%">
 	</div>
 </body>
