--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<title>First Class Fabrics</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=.99, maximum-scale=.99">
 </head>
 <body style="background-color:#000">
-	<div style="margin-top:5rem">
-		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:100%">
+	<div style="margin-top:0.8rem">
+		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:99%">
 	</div>
 </body>
 </html>
