--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>First Class Fabrics</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=.99, maximum-scale=.99">
+	<meta name="viewport" content="width=device-width, initial-scale=.99">
 </head>
 <body style="background-color:#000">
 	<div style="margin-top:0.8rem">
