--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=.98">
 </head>
 <body style="background-color:#000">
-	<div style="margin-top:0.8rem">
-		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:98%">
+	<div">
+		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto">
 	</div>
 </body>
 </html>
