--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<title>First Class Fabrics</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=.98">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="background-color:#000">
 	<div">
-		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto">
+		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:100%">
 	</div>
 </body>
 </html>
