--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color:#000">
 	<div">
-		<img src="FCF_BC_Sonia.png" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:100%">
+		<img src="FCF_Sonia.jpg" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:100%">
 	</div>
 </body>
 </html>
