--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>First Class Fabrics</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="initial-scale=1">
 </head>
 <body style="background-color:#000">
 	<div">
