--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="initial-scale=1">
 </head>
 <body style="background-color:#000">
-	<div">
+	<div>
 		<img src="FCF_Sonia.jpg" alt="business card" style="display:block; object-fit:contain; margin:auto; max-width:100%">
 	</div>
 </body>
